# Mask2PolyMin

./: .gitignore  README.md  example_usage.py  orphaned-junction-points.md  pyproject.toml  requirements-dev.txt  requirements-examples.txt
.github/workflows/: tests.yml
examples/: simple_bitmap_example.py
mask2polymin/: __init__.py  fit_line_segment.py  fit_to_points_sequence.py  line_segment_params.py  plotting.py  polyline.py  sequence_moments.py  sequence_segment.py
performance_test/: Comparison_Charts_Plan.md  Fitter_Improvements_Plan.md  Perf_Test_Plan.md  README.md  Synth_Shapes_Plan.md  analyze_corner_angles.py  baselines.py  margin_sweep.py  metrics.py  plot_comparison.py  plot_results.py  run_benchmark.py  synth_shapes.py
performance_test/gt_shapes/d064/: car_d064_a0.json  plane_d064_a0.json
performance_test/gt_shapes/d128/: car_d128_a0.json  plane_d128_a0.json
performance_test/gt_shapes/d320/: car_d320_a0.json  plane_d320_a0.json
performance_test/results/: runtime_summary.csv  summary.csv
performance_test/summarized_csvs/: comparison_summary.csv  runtime_summary.csv
src/: fit_to_points_sequence.py
test/: fit_line_segment_reference.py  test_consecutive_segments_separation.py  test_consecutive_segments_separation_circular.py  test_fit_closed_polygon.py  test_fit_invariants.py  test_fit_line_segment_reference.py  test_fit_range.py  test_input_validation.py  test_merge_collinear_segments.py  test_orphaned_junction_points.py  test_range_primitives.py  test_segments_to_polyline.py  test_split_segment.py  test_squared_distances.py
